app/styles/main.css
/* ... */
    .panel-option-scan{
          max-height: 410px;
    }
    .panel-journal{
          height: 410px;
    }
    .panel-advanced-option-scan{
          max-height: 175px;
    }
    .OverflowTableThreats {
      max-height: 100px;
      overflow: auto;
    }
    .panel-default-journal{
      height: 400px;
    }
    .panel-default-journal-content{
      max-height: 310px;
    }
    .panel-scanProgression {
      height: 410px;
    }
    .OverflowAccordion-analyseOnDemand {
      max-height: 140px;
      overflow-y: scroll;
      overflow-x:  hidden;
      padding-right: 10px;
    }
    .OverflowTableQuarantaine {
      max-height: 220px;
      overflow: auto;
    }
    .borderless th, .borderless td { 
     border-top: none !important; 
    }
    .btn-file {
        position: relative;
        overflow: hidden;
    }
    .btn-file input[type=file] {
        position: absolute;
        top: 0;
        right: 0;
        min-width: 100%;
        min-height: 100%;
        font-size: 100px;
        text-align: right;
        filter: alpha(opacity=0);
        opacity: 0;
        outline: none;
        background: white;
        cursor: inherit;
        display: block;
    }
    .backgroundColumn {
      position: relative;
      display: block;
      padding: 10px 15px;
      margin-bottom: -1px;
      background-color: #333333 !important;
      border: 0px solid #dddddd !important;
    }

    .list-group-item-firstChild {
      border-top-left-radius : 4px !important;  
    }

    .list-group-item-lastChild {
      border-bottom-left-radius : 4px !important;  
    }

    .generalActive {
      background-color: #0AC99E;
      border-color: #0AC99E !important;
    }

    .analyseActive {
      background-color: #F8AA00;
      border-color: #F8AA00 !important;
    }

    .journalActive {
      background-color: #32BEF0;
      border-color: #32BEF0 !important;
    }
    .titleGroupItem{
      font-size: 16px;
    }
    nav.information {
      margin-bottom: 15px;
      margin-top: 10px;
    }
    
    .status{
      font-family: Arial;
      letter-spacing: 1px;
    }
    .interrogation {
      color: #808080 !important;
    }
    .circleInterrogation {
      color: #F2F2F2 !important;
    }
    /*Information view*/
    table.information {
        box-sizing: border-box;
        -moz-box-sizing: border-box;
        display: flex;
        flex-direction: column;
        align-items: stretch;
        max-height: 230px; /* this can vary */
        font-size: 13px;
        color: #525659;
    }

    table.information * {
        box-sizing: inherit;
        -moz-box-sizing: inherit;
    }

    thead.information {
        display: flex;
        flex-direction: column;
        align-items: stretch;
    }

    tbody.information {
        overflow-y: scroll;
        display: inline-block;
    }

    thead.information > tr.information, tbody.information > tr.information, tfoot.information > tr.information {
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
    }
    .informationTitle {
        font-weight: 500;
    }

    thead.information, tfoot.information {
        flex-shrink: 0;
    }

    th.information, tbody.information td.information {
        width: 100%; /* this can vary */
        overflow-x: hidden;
        text-overflow: ellipsis;
        display: inline-block;
    }

    tfoot.information {
        display: inline-block;
    }

    tfoot.information td.information {
        width: 100%;
        display: inline-block;
    }
    /*information view*/
    /*analyse view*/
    table.analyse {
        box-sizing: border-box;
        -moz-box-sizing: border-box;
        display: flex;
        flex-direction: column;
        align-items: stretch;
        max-height: 130px; /* this can vary */
        font-size: 13px;
        color: #525659;
    }

    table.analyse * {
        box-sizing: inherit;
        -moz-box-sizing: inherit;
    }

    thead.analyse {
        display: flex;
        flex-direction: column;
        align-items: stretch;
    }

    tbody.analyse {
        overflow-y: scroll;
        display: inline-block;
    }

    thead.analyse > tr.analyse, tbody.analyse > tr.analyse, tfoot.analyse > tr.analyse {
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
    }
    .analyseTitle {
        font-weight: 500;
        font-size: 20px;
    }

    thead.analyse, tfoot.analyse {
        flex-shrink: 0;
    }

    th.analyse, tbody.analyse td.analyse {
        width: 100%; /* this can vary */
        overflow-x: hidden;
        text-overflow: ellipsis;
        display: inline-block;
    }

    tfoot.analyse {
        display: inline-block;
    }

    tfoot.analyse td.analyse {
        width: 100%;
        display: inline-block;
    }
    /*analyse view*/
    /*journal view*/
    table.journal {
        box-sizing: border-box;
        -moz-box-sizing: border-box;
        display: flex;
        flex-direction: column;
        align-items: stretch;
        max-height: 250px; /* this can vary */
        font-size: 13px;
        color: #525659;
    }

    table.journal * {
        box-sizing: inherit;
        -moz-box-sizing: inherit;
    }

    thead.journal {
        display: flex;
        flex-direction: column;
        align-items: stretch;
    }

    tbody.journal {
        overflow-y: scroll;
        display: inline-block;
    }

    thead.journal > tr.journal, tbody.journal > tr.journal, tfoot.journal > tr.journal {
        display: flex;
        flex-direction: row;
        flex-wrap: nowrap;
    }
    .journalTitle {
        font-weight: 500;
        font-size: 20px;
    }

    thead.journal, tfoot.journal {
        flex-shrink: 0;
    }

    th.journal, tbody.journal td.journal {
        width: 100%; /* this can vary */
        overflow-x: hidden;
        text-overflow: ellipsis;
        display: inline-block;
    }

    tfoot.journal {
        display: inline-block;
    }
/* ... */

